<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/more_options">

    <PreferenceCategory android:title="General" />

    <SwitchPreference
        android:defaultValue="@bool/pref_guided_default"
        android:key="@string/pref_guided_game"
        android:summaryOff="@string/pref_guided_hint_off"
        android:summaryOn="@string/pref_guided_hint_on"
        android:title="Guided Game" />

    <PreferenceCategory android:title="Select a player" />

    <DropDownPreference
        android:key="@string/pref_user"
        android:title="Already existing" />
    <EditTextPreference
        android:key="@string/pref_new_user"
        android:summary="@string/new_user_hint"
        android:title="@string/new_user" />

    <PreferenceCategory android:title="@string/game_settings" />

    <DropDownPreference
        android:key="@string/pref_game_set"
        android:summary="Select a deck of cards to be used."
        android:title="Game set" />
</PreferenceScreen>